implementing Fed and Mar 2021 tweaks

--- a/_config/_includes/options/last_slide_of_day.html
+++ b/_config/_includes/options/last_slide_of_day.html
@@ -21,11 +21,24 @@ class: subtitle
 
 # Quick poll
 
-Have you ever written:
+.left-column[
+### Track 1
 
-- any Jinja expression (outside of `ref`, `source`)
-- a macro
-- a custom schema test
+- "I'm new to Jinja and Marcos."
+- Introduction to Jinja
+- Pivot with Jinja exercise
+
+]
+
+.right-column[
+### Track 2
+
+- "I have experience with Jinja and Macros."
+- Accelerated Track 1
+- Build a data test
+- Build a custom schema test
+
+]
 
 Please respond to the Zoom poll!
 
