update footer and nav

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -6,7 +6,7 @@
 					<div class="navigation-links">
 						<div class="navigation-link">
 							<a class="navigation-anchor navigation-brand" href="/" title="{{site.description}}">
-                                <img src="/ui/img/dbt-logo-color.png" />
+                                <img src="/ui/img/dbt_new.png" />
 							</a>
 						</div>
 						
