update styles for slides

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -2,14 +2,15 @@
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
 body {
-  font-family: 'Lato';
+  font-family: 'source-sans-pro';
   color: #444;
 }
 
 h1, h2, h3 {
-    font-family: 'dbt-brand','Verdana';
+    font-family: 'source-sans-pro','Verdana';
     font-weight: normal;
     color: rgb(255, 132, 94);
 }
@@ -65,7 +66,7 @@ h1, h2, h3 {
 
   .remark-slide-number:before {
      white-space: pre;
-     content: '© Fishtown Analytics. Not for commercial use.      ';
+     content: '© dbt Labs, Inc. Not for commercial use.      ';
      font-size: 10px;
   }
 
@@ -87,9 +88,9 @@ h1, h2, h3 {
   }
 
   .title {
-    background: url('/ui/img/dbt-learn-light.png'), #123744;
-    background-position: 5% 95%;
-    background-size: 30%;
+    background: url('/ui/img/dbt_new_light.svg'), #123744;
+    background-position: 5% 90%;
+    background-size: 15%;
     background-repeat: no-repeat;
     color: white;
   }
