add new font to site

--- a/_config/_includes/options/styles.html
+++ b/_config/_includes/options/styles.html
@@ -1,1 +1,17 @@
 <link rel="stylesheet" type="text/css" href="{% link www.getdbt.com/ui/css/velllum.scss %}" media="all" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+body h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p{
+    font-family: "Source Sans Pro", sans-serif;
+}
+
+.text-medium, .text-large, .text-larger, .text-largest, body {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 1.25rem;
+}
+
+</style>
+
