update font on slides

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -1,16 +1,15 @@
 <style>
 
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);
+@import url(https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
 
 body {
-  font-family: 'source-sans-pro';
+  font-family: 'Source Sans Pro';
   color: #444;
 }
 
 h1, h2, h3 {
-    font-family: 'source-sans-pro','Verdana';
+    font-family: 'Source Sans Pro','Verdana';
     font-weight: normal;
     color: rgb(255, 132, 94);
 }
@@ -31,7 +30,7 @@ h1, h2, h3 {
   margin-top: 10px;
 }
 
-.remark-code, .remark-inline-code { font-family: 'Inconsolata'; }
+.remark-code, .remark-inline-code { font-family: 'Source Code Pro','monospace'; }
 
   /* Two-column layouts */
   .left-column  { width: 49%; float: left; }
@@ -154,77 +153,5 @@ h1, h2, h3 {
     color: rgb(255, 132, 94);
     font-size: 1.2em
   }
-
-  @font-face {
-      font-family: "dbt-brand";
-      font-weight: 300;
-      font-style: normal;
-      src: url("/fonts/burlingame/dbt_cloud-04112018/Fonts/c2ee5530-f585-4174-a3ab-2c494d1a9334.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: 300;
-      font-style: oblique;
-      src: url("/fonts/burlingame/dbt_cloud-04112018/Fonts/dbc491c3-9757-40e1-aa60-4796eacee703.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: normal;
-      font-style: normal;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/3f3a4727-b128-49d3-aba6-6a6df09ecddc.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: normal;
-      font-style: oblique;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/2023ec3d-950e-4705-a934-f2d53902faff.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: 500;
-      font-style: normal;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/87c2a7f4-6e05-446f-b0e5-b8506fe95065.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: 500;
-      font-style: oblique;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/aa270bc7-f7ce-4020-84eb-51ca1cf66ad9.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: bold;
-      font-style: normal;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/067a3ea5-ed1e-4cdc-bb83-883c1829ffa0.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: bold;
-      font-style: oblique;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/7c49b40e-8327-4fc1-9228-512ff81b273a.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: 800;
-      font-style: normal;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/5ca2310c-a0d0-4eea-92d9-11a54021e6f6.woff") format("woff");
-  }
-
-  @font-face {
-      font-family:"dbt-brand";
-      font-weight: 800;
-      font-style: oblique;
-      src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/8457c435-aede-4c82-a152-d697bb1f30b0.woff") format("woff");
-  }
-
-
 
 </style>
