update png for next presentation

--- a/_config/_includes/options/next_presentation.html
+++ b/_config/_includes/options/next_presentation.html
@@ -20,8 +20,8 @@
                 
 <a href="/lessons/{{next_slug}}">	
     <img	
-        style="width: 5%; position: absolute; bottom: 10%; right: 5%;"	
-        src="/ui/img/graph/avatar.png"></img>	
+        style="width: 4%; position: absolute; bottom: 10%; right: 5%;"	
+        src="/ui/img/dbt-standalone-new.png"></img>	
 </a>
                 
             {% endif %}
