update color s for slides

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -5,13 +5,13 @@
 
 body {
   font-family: 'Source Sans Pro';
-  color: #444;
+  color: #262a38;
 }
 
 h1, h2, h3 {
     font-family: 'Source Sans Pro','Verdana';
     font-weight: normal;
-    color: rgb(255, 132, 94);
+    color: #ff694a;
 }
 
 .white {
@@ -19,11 +19,11 @@ h1, h2, h3 {
 }
 
 .orange {
-    color: rgb(255, 132, 94);
+    color: #ff694a;
 }
 
 .remark-container {
-  background-color: #123744;
+  background-color: #262a38;
 }
 
 .remark-slide-content li {
@@ -87,7 +87,7 @@ h1, h2, h3 {
   }
 
   .title {
-    background: url('/ui/img/dbt_new_light.svg'), #123744;
+    background: url('/ui/img/dbt_new_light.svg'), #262a38;
     background-position: 5% 90%;
     background-size: 15%;
     background-repeat: no-repeat;
@@ -99,7 +99,7 @@ h1, h2, h3 {
   }
 
   .subtitle {
-    background: #123744;
+    background: #262a38;
     color: white;
   }
   .subtitle h1, .subtitle h2 {
@@ -150,7 +150,7 @@ h1, h2, h3 {
   }
 
   .thumbnail-orange {
-    color: rgb(255, 132, 94);
+    color:#ff694a;
     font-size: 1.2em
   }
 
