tweak logo on next_lesson.html

--- a/_config/_includes/options/next_lesson.html
+++ b/_config/_includes/options/next_lesson.html
@@ -19,7 +19,7 @@
 {% endif %}
 
 <a href="/lessons/{{next_slug}}">
-  <img style="width: 5%; position: absolute; bottom: 10%; right: 5%;" src="/ui/img/graph/avatar.png"></img>
+  <img style="width: 5%; position: absolute; bottom: 10%; right: 5%;" src="/ui/img/dbt-standalone-new.png"></img>
 </a>
 
 {% endif %}
