--- a/_config/_includes/content/footer.html
+++ b/_config/_includes/content/footer.html
@@ -5,7 +5,7 @@
 			</div>
 			<div class="col-lg-6 text-right text-center-small">
 				<ul class="list-inline">
-					<li><a href="http://www.getdbt.com/dbt-labs/" target="_blank"><strong>dbt Learn</strong> is hosted with love by<strong class="nowrap"> dbt Labs</strong></a></li>
+					<li><a href="https://www.getdbt.com/dbt-labs/" target="_blank"><strong>dbt Learn</strong> is hosted with love by<strong class="nowrap"> dbt Labs</strong></a></li>
 				</ul>
 			</div>
 		</div>
