fix name of css element

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -129,7 +129,7 @@ h1, h2, h3 {
     font-style: italic
   }
 
-  .caption-left-small {
+  .caption-right-small {
     font-size: 40%;
     font-style: italic;
     position: absolute;
