update survey link, add microsoft survey, remove office hours, update… (#175)
* update survey link, add microsoft survey, remove office hours, update learn-styles

* fix name of css element

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -129,6 +129,14 @@ h1, h2, h3 {
     font-style: italic
   }
 
+  .caption-right-small {
+    font-size: 40%;
+    font-style: italic;
+    position: absolute;
+    bottom: 10%;
+    left: 90%;
+  }
+
   table {
       border-collapse: collapse;
       width: 100%;
