First pass of making slides generic

--- a/_config/_includes/options/last_slide_of_day.html
+++ b/_config/_includes/options/last_slide_of_day.html
@@ -3,7 +3,7 @@
 class: subtitle
 
 .left-column[
-## Day 1: Done
+## Done
 
 {% include options/zoom_out.html %}
 ]
@@ -11,7 +11,7 @@ class: subtitle
 --
 
 .right-column[
-## Day 2: Preview
+## Next Up
 {% include options/preview.html %}
 ]
 
@@ -39,8 +39,5 @@ class: subtitle
 - Build a custom schema test
 
 ]
-
-Please respond to the Zoom poll!
-
 
 {% include options/next_presentation.html %}
